--- a/.github/workflows/requirements.txt
+++ b/.github/workflows/requirements.txt
@@ -1,7 +1,9 @@
 python-telegram-bot==13.15
-angelone
+smartapi-python==1.1.0
 pandas
 numpy
 python-dotenv
 requests
 pyotp
+PyYAML
+websocket-client
